add support for kafka backends
